--- a/media.html
+++ b/media.html
@@ -52,7 +52,7 @@
 		
 	</div>
 	
-	<div class="h-content" id="m_content1">
+	<div class="h-content m-1 animate" id="m_content1">
 		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">พระมหาชนกฉบับตีพิมพ์</p>
 		<div class="h-section-1" id="sec_1">
 			<div class="img-left">
@@ -68,7 +68,7 @@
 		</div>
 	</div>
 
-	<div class="h-content setDisplay" id="m_content2">
+	<div class="h-content setDisplay m-1 animate" id="m_content2">
 		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">หนังสือการ์ตูนพระมหาชนก</p>
 		<div class="h-section-1" id="sec_1">
 			<div class="img-left">
@@ -84,7 +84,7 @@
 		</div>
 	</div>
 
-	<div class="h-content setDisplay" id="m_content3">
+	<div class="h-content setDisplay animate" id="m_content3">
 		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">แอนิเมชั่นพระมหาชนก</p>
 		<iframe width="90%" height="500" src="https://www.youtube.com/embed/XMBPsnacYWI?autoplay=1" allow="autoplay" frameborder="0" allowfullscreen></iframe>
 		<!-- allow="autoplay" -->
@@ -111,16 +111,16 @@
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					<strong>ทีมพากย์เสียงในภาพยนตร์</strong><br>
-					สุเชาว์   พงษ์วิไล  พากษ์เสียงพระเจ้ามหาชนก (องค์ปู่)<br>
-					นนทรีย์  นิมิบุตร  พากษ์เสียงพระอริฏฐชนก<br>
-					ฉัตรชัย  เปล่งพานิช  พากษ์เสียงพระโปลชนก<br>
-					สินจัย  เปล่งพานิช  พากษ์เสียงพระเทวี<br>
-					อรรถพร  ธีมากร  พากษ์เสียงพระมหาชนก<br>
-					ณมญชุ์  พงษ์วิไล  พากษ์เสียงพระสิวลีเทวี<br>
-					คมสัน  นันทจิต  พากษ์เสียงรโหปฐกะ<br>
-					มนัสนันท์  พันเลิศวงศ์สกุล  พากษ์เสียงมณีเมขลา<br>
-					นิวัติ  กองเพียร  พากษ์เสียงท้าวสักกเทวราช<br>
-					ปริทัศน์  กองเพียร  พากษ์เสียงอุจจทิจพราหมณ์มหาศาล
+					&#9733; สุเชาว์   พงษ์วิไล  พากย์เสียงพระเจ้ามหาชนก (องค์ปู่)<br>
+					&#9733; นนทรีย์  นิมิบุตร  พากย์เสียงพระอริฏฐชนก<br>
+					&#9733; ฉัตรชัย  เปล่งพานิช  พากย์เสียงพระโปลชนก<br>
+					&#9733; สินจัย  เปล่งพานิช  พากย์เสียงพระเทวี<br>
+					&#9733; อรรถพร  ธีมากร  พากย์เสียงพระมหาชนก<br>
+					&#9733; ณมญชุ์  พงษ์วิไล  พากย์เสียงพระสิวลีเทวี<br>
+					&#9733; คมสัน  นันทจิต  พากย์เสียงรโหปฐกะ<br>
+					&#9733; มนัสนันท์  พันเลิศวงศ์สกุล  พากย์เสียงมณีเมขลา<br>
+					&#9733; นิวัติ  กองเพียร  พากย์เสียงท้าวสักกเทวราช<br>
+					&#9733; ปริทัศน์  กองเพียร  พากย์เสียงอุจจทิจพราหมณ์มหาศาล
 				</p>
 			</div>
 		</div>
