--- a/story.html
+++ b/story.html
@@ -56,9 +56,9 @@
 		
 	</div>
 
-	<div class="h-content" id="m_content1">
+	<div class="h-content animate" id="m_content1">
 		<p class="lightGreen Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">เนื้อเรื่อง<br>พระมหาชนก</p>
-		<img src="img/story/11.png">
+		<img src="img/story/11.png" class="paragraph" id="img1">
 		<p class="darkGreen s-content paragraph" id="p1">
 			พระมหากษัตริย์ผู้ครองราชย์นครมิถิลาเมืองหลวงแห่งแคว้นวิเทหะ ทรงมีพระราชโอรสสองพระองค์ คือ พระอริฏฐชนกและพระโปลชนก หลังจากพระราชบิดาสวรรคต พระอริฏฐชนกผู้เป็นพระมหาอุปราชก็เสด็จขึ้นครองราชย์ต่อมาโดยทรงแต่งตั้งพระโปลชนกผู้เป็นน้องชายเป็นพระมหาอุปราช<br><br>
 			ในเวลาต่อได้มีเหล่าอำมาตย์ผู้ทุจริตบางคนออกอุบายให้พระอริฏฐชนกเกิดความระแวงน้องชายตนเอง โดยพากันเพ็ดทูลว่าพระโปลชนกกำลังวางแผนคิดการประทุษร้ายต่ออาณาจักร พระราชาทรงหลงเชื่ออำมาตย์เหล่านั้น จึงทรงให้ราชมัลจับกุมพระโปลชนกไปขังไว้ทว่าด้วยบุญบารมีของพระโปลชนก พระองค์จึงสามารถหลบออกจากที่คุมขังและเสด็จหนีไปยังชายแดนได้
@@ -69,35 +69,35 @@
 			ครั้นเมื่อทัพของพระองค์ไปถึงบรรดาทหารรักษาเมืองจำนวนมากได้พากันแปรภักดิ์มาเข้ากับพระโปลชนกเนื่องจากเห็นใจที่พระโปลชนกถูกจับไปขังไว้อย่างไม่เป็นธรรม<br><br>
 			เมื่อพระพระอริฏฐชนกทรงทราบว่าพระโปลชนกยกทัพมาชิงราชสมบัติและได้มีเหล่าไพร่พลจำนวนมากแปรภักดิ์ พระองค์ตรัสสั่งพระมเหสีซึ่งกำลังทรงครรภ์แก่ให้ทรงหลบหนีเอาตัวรอด ส่วนพระองค์เองทรงยกทัพออกทำสงครามกับพระโปลชนกจนสิ้นพระชนม์ในสนามรบ เมื่อนั้นพระโปลชนกจึงทรงขึ้นเป็นกษัตริย์ครองนครมิถิลาสืบต่อมา
 		</p>
-		<img src="img/story/13.png">
+		<img src="img/story/13.png" class="small paragraph" id="img3">
 		<p class="darkGreen s-content small paragraph" id="p3">
 			ฝ่ายพระมเหสีของพระพระอริฏฐชนกได้เสด็จหนีไปยังเมืองกาลจัมปากะ ระหว่างทางพระอินทร์เสด็จลงมาช่วย โดยทรงแปลงกายเป็นชายชราขับเกวียนพาพระนางเสด็จไปถึงและให้พระนางนั่งพักอยู่ในศาลาแห่งหนึ่งภายในเมือง บังเอิญพราหมณ์ทิศาปราโมกข์เดินผ่านมาก็เกิดความเอ็นดูสงสาร จึงรับพระนางไปอยู่ด้วยและอุปการะเลี้ยงดูดุจเป็นน้องสาว ไม่นานนักพระมเหสีของพระเจ้าอริฏฐชนกก็ประสูติพระโอรส ทรงตั้งพระนามว่า มหาชนกกุมาร ตามพระนามของพระอัยกา
 		</p>
-		<img src="img/story/14.png">
+		<img src="img/story/14.png" class="small paragraph" id="img4">
 		<p class="darkGreen s-content small paragraph" id="p4">
 			วันหนึ่ง มหาชนกกุมารได้ชกต่อยกับเพื่อนหลังจากล้อเลียนว่าเป็นลูกไม่มีพ่อ มหาชนกกุมารพยายามถามความจริงจากพระมารดา พระมารดาจึงตรัสเล่าเรื่องทั้งหมดให้ทราบ พระองค์จึงตั้งพระทัยว่าเมื่อเติบใหญ่ก็จะเสด็จไปเอาราชสมบัติเมืองมิถิลากลับคืนมา<br><br>
 			ครั้นเมื่อพระมหาชนกกุมารเติบใหญ่ พระองค์ก็ตรัสแก่พระมารดาว่าจะไปล่องเรือสู่ดินแดนสุวรรณภูมิเพื่อทำการค้าสะสมทุนรอนและกำลังคนเพื่อชิงเอาราชสมบัตินครมิถิลากลับคืน พระมารดาจึงทรงนำเอาทรัพย์สินมีค่ามาจากมิถิลา ๓ สิ่ง คือ แก้วมณี แก้วมุกดาและแก้ววิเชียร เพื่อเป็นทุนล่องเรือไปค้าขายที่สุวรรณภูมิ<br><br>
 			ในระหว่างทางเกิดพายุใหญ่โหมกระหน่ำอย่างรุนแรงจนเรือจะล่ม บรรดาลูกเรือต่างหวาดกลัวและร้องคร่ำครวญหนีตายจนเกิดความโกลาหล<br><br>
 			ฝ่ายมหาชนกกุมารนั้น เมื่อทรงทราบว่าเรือจะจมแน่แล้วก็เสวยอาหารจนอิ่มหนำ จากนั้นทรงนำผ้ามาชุบน้ำมันจนชุ่มแล้วนุ่งผ้านั้นอย่างแน่นหนา ครั้นเมื่อเรือจมลงเหล่าพ่อค้าและกลาสีเรือทั้งปวงก็จมน้ำกลายเป็นอาหารของปลาและเต่า
 		</p>
-		<img src="img/story/15.png">
-		<p class="darkGreen s-content">
+		<img src="img/story/15.png" class="small paragraph" id="img5">
+		<p class="darkGreen s-content small paragraph" id="p5">
 			ส่วนพระมหาชนกทรงแหวกว่ายอยู่ในทะเลถึง ๗ วัน นางมณีเมขลา เทพธิดาผู้รักษามหาสมุทร เห็นพระมหาชนกว่ายน้ำอยู่เช่นนั้น จึงสนทนาแลกเปลี่ยนกันจนนางมณีเมขลาเข้าใจในปรัชญาของการบำเพ็ญวิริยบารมี นางมณีเมขลาจึงช่วยอุ้มพามหาชนกกุมาร ไปจนถึงฝั่งเมืองมิถิลา
 		</p>
-		<img src="img/story/16.png">
-		<p class="darkGreen s-content">
+		<img src="img/story/16.png" class="small paragraph" id="img6">
+		<p class="darkGreen s-content small paragraph" id="p6">
 			ยามนั้นที่นครมิถิลา ฝ่ายพระเจ้าโปลชนกทรงประชวรหนัก พระองค์ไม่มีพระโอรสมีแต่พระธิดาพระนามว่า สิวลี พระโปลชนกทรงรู้ว่าพระองค์ใกล้สิ้นพระชนม์แล้ว จึงตรัสสั่งอำมาตย์ว่าผู้ใดสามารถไขปริศนาขุมทรัพย์ได้ก็ยกบ้านเมืองให้แก่ผู้นั้น<br><br>
 			ในที่สุดหลังจากพระโปลชนกสิ้นพระชนม์ลง บรรดาเสนาข้าราชบริพารจึงตั้งพิธีเสี่ยงราชรถ ราชรถได้มาหยุดอยู่หน้าศาลาที่พระมหาชนกกุมารทรงประทับอยู่ พระองค์ทรงไขปริศนาได้ทั้งหมด ผู้คนจึงพากันสรรเสริญปัญญาของพระมหาชนกก่อนจะอัญเชิญพระองค์อภิเษกสมรสกับเจ้าหญิงสิวลีและขึ้นครองราชย์สมบัติแคว้นวิเทหะ พระมหาชนกทรงครองราชย์ด้วยความผาสุกมาโดยตลอด เนื่องด้วยทรงอยู่ในทศพิธราชธรรม<br><br>
 			ต่อมาพระนางสิวลีประสูติพระโอรส ทรงนามว่า ทีฆาวุกุมาร ครั้นเมื่อเจริญวัยขึ้นพระบิดาทรงโปรดให้ดำรงตำแหน่งมหาอุปราช
 		</p>
-		<img src="img/story/17.png">
-		<p class="darkGreen s-content">
+		<img src="img/story/17.png" class="small paragraph" id="img7">
+		<p class="darkGreen s-content small paragraph" id="p7">
 			อยู่มาวันหนึ่ง พระราชามหาชนกได้เสด็จอุทยานทอดพระเนตรเห็นมะม่วงต้นหนึ่งมีผล ต้นหนึ่งไม่มีผล โดยต้นที่มีผลนั้น ผลมีรสชาติอร่อยพระองค์ได้ทรงชิมและตรัสชม ทั้งทรงตั้งใจว่าจะกลับมาเสวยอีกครั้งในยามเย็น<br><br>
 			ทว่าเมื่อทรงออกจากพระราชอุทยานไปแล้ว มะม่วงต้นที่มีผลรสชาติดีก็เสียหายจนหมดเพราะผู้คนพากันมาโค่นเพื่อเอาผลมะม่วง ส่วนต้นที่ไม่มีผลยังอยู่รอดได้<br><br>
 			เมื่อพระมหาชนกทรงทราบเรื่องจึงทรงคิดได้ว่า ราชสมบัติ ก็เปรียบเหมือนต้นไม้มีผลที่อาจถูกทำลาย แม้จะไม่ถูกทำลายก็ต้องคอยระแวดระวังรักษาให้เกิดความกังวล พระองค์ประสงค์จะทำตนเป็นผู้ไม่มีกังวลเหมือนต้นไม้ไม่มีผล แต่ก็ไม่ทรงทำเช่นนั้นเพราะคิดว่าเป็นหน้าที่ของพระราชาที่จะทำให้สังคมอยู่รอดพ้นก่อน ทั้งนี้เนื่องด้วยเพราะผู้คนในสังคมยังขาดสติปัญญา อีกทั้งยังเห็นแก่ประโยชน์เฉพาะหน้าดุจดังผู้ที่ทำลายต้นมะม่วงเพียงเพราะต้องการผลมะม่วงโดยไม่คิดเก็บไว้กินในวันหน้า
 		</p>
-		<img src="img/story/18.png">
-		<p class="darkGreen s-content">
+		<img src="img/story/18.png" class="small paragraph" id="img8">
+		<p class="darkGreen s-content small paragraph" id="p8">
 			เมื่อพระมหาชนก ทรงคิดดังนั้นแล้วจึงให้ผู้รู้วิชามาทำนุบำรุงต้นมะม่วงด้วยหลักวิชาการทางการเกษตร และจัดตั้งสถานศึกษาชื่อปูทะเลย์มหาวิชชาลัย เพื่อสร้างคนที่มีสติปัญญาให้แก่สังคมและจะได้เจริญรุ่งเรือง ดำรงอยู่อย่างผาสุกสืบไป
 		</p>
 	</div>
@@ -141,9 +141,13 @@
 		function toHomepage(){
 			location.href = "index.html";
 		}
-		
+		// window.onload = function() {
+		// 	p1.classList.remove('small');
+		// 	img1.classList.remove('small');
+		// }
 		function ppp(){
 			let pp1 = p1.getBoundingClientRect();
+
 			if (pp1.top < window.innerHeight && pp1.bottom > 0) {
 				p1.classList.remove('small');
 			}
@@ -171,12 +175,90 @@
 			else {
 				p4.classList.add('small');
 			}
-			let ipp4 = img2.getBoundingClientRect();
-			if (ipp4.top < window.innerHeight && ipp4.bottom > 0) {
+			let pp5 = p5.getBoundingClientRect();
+			if (pp5.top < window.innerHeight && pp5.bottom > 0) {
+				p5.classList.remove('small');
+			}
+			else {
+				p5.classList.add('small');
+			}
+			let pp6 = p6.getBoundingClientRect();
+			if (pp6.top < window.innerHeight && pp6.bottom > 0) {
+				p6.classList.remove('small');
+			}
+			else {
+				p6.classList.add('small');
+			}
+			let pp7 = p7.getBoundingClientRect();
+			if (pp7.top < window.innerHeight && pp7.bottom > 0) {
+				p7.classList.remove('small');
+			}
+			else {
+				p7.classList.add('small');
+			}
+			let pp8 = p8.getBoundingClientRect();
+			if (pp8.top < window.innerHeight && pp8.bottom > 0) {
+				p8.classList.remove('small');
+			}
+			else {
+				p8.classList.add('small');
+			}
+
+			let ipp1 = img1.getBoundingClientRect();
+			if (ipp1.top < window.innerHeight && ipp1.bottom > 0) {
+				img1.classList.remove('small');
+			}
+			else {
+				img1.classList.add('small');
+			}
+			let ipp2 = img2.getBoundingClientRect();
+			if (ipp2.top < window.innerHeight && ipp2.bottom > 0) {
 				img2.classList.remove('small');
 			}
 			else {
 				img2.classList.add('small');
+			}
+			let ipp3 = img3.getBoundingClientRect();
+			if (ipp3.top < window.innerHeight && ipp3.bottom > 0) {
+				img3.classList.remove('small');
+			}
+			else {
+				img3.classList.add('small');
+			}
+			let ipp4 = img4.getBoundingClientRect();
+			if (ipp4.top < window.innerHeight && ipp4.bottom > 0) {
+				img4.classList.remove('small');
+			}
+			else {
+				img4.classList.add('small');
+			}
+			let ipp5 = img5.getBoundingClientRect();
+			if (ipp5.top < window.innerHeight && ipp5.bottom > 0) {
+				img5.classList.remove('small');
+			}
+			else {
+				img5.classList.add('small');
+			}
+			let ipp6 = img6.getBoundingClientRect();
+			if (ipp6.top < window.innerHeight && ipp6.bottom > 0) {
+				img6.classList.remove('small');
+			}
+			else {
+				img6.classList.add('small');
+			}
+			let ipp7 = img7.getBoundingClientRect();
+			if (ipp7.top < window.innerHeight && ipp7.bottom > 0) {
+				img7.classList.remove('small');
+			}
+			else {
+				img7.classList.add('small');
+			}
+			let ipp8 = img8.getBoundingClientRect();
+			if (ipp8.top < window.innerHeight && ipp8.bottom > 0) {
+				img8.classList.remove('small');
+			}
+			else {
+				img8.classList.add('small');
 			}
 			
 		}
