--- a/artist.html
+++ b/artist.html
@@ -60,7 +60,7 @@
 		
 	</div>
 	
-	<div class="a-content" id="a_content1">
+	<div class="a-content animate" id="a_content1">
 		<div class="a-img">
 			<img src="img/artist/1/artist.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -80,7 +80,7 @@
 	</div>
 
 	
-	<div class="a-content setDisplay" id="a_content2">
+	<div class="a-content setDisplay animate" id="a_content2">
 		<div class="a-img">
 			<img src="img/artist/2/re.jpg" class="h_imgContent" id="a_img">
 		</div>		
@@ -99,7 +99,7 @@
 		</div>		
 	</div>
 
-	<div class="a-content setDisplay" id="a_content3">
+	<div class="a-content setDisplay animate" id="a_content3">
 		<div class="a-img">
 			<img src="img/artist/3/re.jpg" class="h_imgContent" id="a_img">
 		</div>		
@@ -118,7 +118,7 @@
 		</div>		
 	</div>
 
-	<div class="a-content setDisplay" id="a_content4">
+	<div class="a-content setDisplay animate" id="a_content4">
 		<div class="a-img">
 			<img src="img/artist/4/a.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -138,7 +138,7 @@
 		
 	</div>
 
-	<div class="a-content setDisplay" id="a_content5">
+	<div class="a-content setDisplay animate" id="a_content5">
 		<div class="a-img">
 			<img src="img/artist/5/a.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -158,7 +158,7 @@
 		</div>
 	</div>
 
-	<div class="a-content setDisplay" id="a_content6">
+	<div class="a-content setDisplay animate" id="a_content6">
 		<div class="a-img">
 			<img src="img/artist/6/a.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -178,7 +178,7 @@
 		</div>
 	</div>
 
-	<div class="a-content setDisplay" id="a_content7">
+	<div class="a-content setDisplay animate" id="a_content7">
 		<div class="a-img">
 			<img src="img/artist/7/a.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -199,7 +199,7 @@
 		
 	</div>
 
-	<div class="a-content setDisplay" id="a_content8">
+	<div class="a-content setDisplay animate" id="a_content8">
 		<div class="a-img">
 			<img src="img/artist/8/a.jpg" class="h_imgContent" id="a_img">
 		</div>
