--- a/history.html
+++ b/history.html
@@ -52,7 +52,7 @@
 
 	</div>
 
-	<div class="h-content" id="h_content">
+	<div class="h-content animate" id="h_content1">
 		<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</p>
 		<div class="h-section-1 sec1" id="sec_1">
 			<div class="img-left">
@@ -146,18 +146,34 @@
 		</div>
 	</div>
 
+	<div class="h-content setDisplay animate" id="h_content2">
+		<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</p>
+		<div class="h-section-1 sec1" id="sec_1">
+			<div class="img-left">
+				<img src="img/history/img001Re.jpg" class="h_imgContent" id="h_img">
+			</div>
+
+
+			<div class="h-innerContent">
+				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
+					พระมหาชนกเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก ๑๐ ชาติสุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะ และตรัสรู้เป็นพระสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงสนพระราชหฤทัย เนื่องจากได้ทรงสดับพระธรรมเทศนาของสมเด็จพระมหาวีรวงศ์ แห่งวัดราชผาติการาม เมื่อปีพ.ศ.๒๕๒๐ เรื่องพระมหาชนกเสด็จทอดพระเนตรพระราชอุทยานในกรุงมิถิลา จึงทรงค้นคว้าเรื่องพระมหาชนกในพระไตรปิฎกเพิ่มเติม และทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกตั้งแต่ต้นเรื่อง โดยดัดแปลงเล็กน้อยจากพระสุตตันตปิฎกขุททกนิกายชาดก เล่มที่ ๔ ภาคที่ ๒ เพื่อให้เข้าใใจง่ายขึ้น ทรงแปลพระมหาชนกชาดกเสร็จสมบูรณ์ เมื่อพ.ศ.๒๕๓๑ และโปรดเกล้าโปรดกระหม่อมให้จัดพิมพ์ในปีกาญจนาภิเษกทรงครองสิริราชสมบัติครบ ๕๐ ปี ในวันที่ ๒๘ มีนาคม ๒๕๓๙ และได้มีการพิมพ์เป็นฉบับการ์ตูน ในปีพ.ศ.๒๕๔๒
+				</p>
+			</div>
+		</div>
+	</div>
+
 	<footer class="footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเก้าเจ้าคุณทหารลาดกระบัง © 2019</footer>
 
 	<script type="text/javascript">
-		content = [
-		{
-			"i":"“นักเขียน นักประพันธ์ งานสำคัญก็คือ แสดงความคิดของตอนออกมาเป็นเรื่องชีวิต หรือเรื่องแต่งขึ้นมา เพื่อให้ผู้อื่นได้ประโยชน์ คือความรู้บ้าง บันเทิงบ้าง นักแสดงความคิดสำคัญมาก เพราะว่ามีอิทธิพลต่อชีวิตของมวลมนุษย์ อาจทำให้เกิดความคล้อยตามไปและตัวท่านเขียนดีก็ยิ่งคล้อยตามกันมาก ฉะนั้น นักประพันธ์ต้องมีความรับผิดชอบสูง เพราะท่านเป็นผู้ปั้นความคิดและความบริสุทธิ์ในความคิด จึงเป็นเรื่องที่สำคัญ ดังบทความกลั่นกรองไว้ในสมองว่า สิ่งที่จะเขียนออกมาจะไม่แสลง ไม่ทำลายความคิดของประชากร ไม่ทำลายผู้อื่น และตนเอง คือมีเสรีภาพในการเขียนอย่างเต็มที่ในขอบเขตของศีลธรรม”",
-			"ii":"(พระบรมราโชวาทพระราชทานแก่คณะกรรมการสมาคมนักเขียนแห่งประเทศไทย ณ พระตำหนักจิตรลดารโหฐาน วันศุกร์ที่ ๓ พฤศจิกายน ๒๕๑๕)"
-		},
-		{
-			"i":"พระมหาชนกเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก ๑๐ ชาติสุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะ และตรัสรู้เป็นพระสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงสนพระราชหฤทัย เนื่องจากได้ทรงสดับพระธรรมเทศนาของสมเด็จพระมหาวีรวงศ์ แห่งวัดราชผาติการาม เมื่อปีพ.ศ.๒๕๒๐ เรื่องพระมหาชนกเสด็จทอดพระเนตรพระราชอุทยานในกรุงมิถิลา จึงทรงค้นคว้าเรื่องพระมหาชนกในพระไตรปิฎกเพิ่มเติม และทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกตั้งแต่ต้นเรื่อง โดยดัดแปลงเล็กน้อยจากพระสุตตันตปิฎกขุททกนิกายชาดก เล่มที่ ๔ ภาคที่ ๒ เพื่อให้เข้าใใจง่ายขึ้น ทรงแปลพระมหาชนกชาดกเสร็จสมบูรณ์ เมื่อพ.ศ.๒๕๓๑ และโปรดเกล้าโปรดกระหม่อมให้จัดพิมพ์ในปีกาญจนาภิเษกทรงครองสิริราชสมบัติครบ ๕๐ ปี ในวันที่ ๒๘ มีนาคม ๒๕๓๙ และได้มีการพิมพ์เป็นฉบับการ์ตูน ในปีพ.ศ.๒๕๔๒",
-		}
-		];
+		// content = [
+		// {
+		// 	"i":"“นักเขียน นักประพันธ์ งานสำคัญก็คือ แสดงความคิดของตอนออกมาเป็นเรื่องชีวิต หรือเรื่องแต่งขึ้นมา เพื่อให้ผู้อื่นได้ประโยชน์ คือความรู้บ้าง บันเทิงบ้าง นักแสดงความคิดสำคัญมาก เพราะว่ามีอิทธิพลต่อชีวิตของมวลมนุษย์ อาจทำให้เกิดความคล้อยตามไปและตัวท่านเขียนดีก็ยิ่งคล้อยตามกันมาก ฉะนั้น นักประพันธ์ต้องมีความรับผิดชอบสูง เพราะท่านเป็นผู้ปั้นความคิดและความบริสุทธิ์ในความคิด จึงเป็นเรื่องที่สำคัญ ดังบทความกลั่นกรองไว้ในสมองว่า สิ่งที่จะเขียนออกมาจะไม่แสลง ไม่ทำลายความคิดของประชากร ไม่ทำลายผู้อื่น และตนเอง คือมีเสรีภาพในการเขียนอย่างเต็มที่ในขอบเขตของศีลธรรม”",
+		// 	"ii":"(พระบรมราโชวาทพระราชทานแก่คณะกรรมการสมาคมนักเขียนแห่งประเทศไทย ณ พระตำหนักจิตรลดารโหฐาน วันศุกร์ที่ ๓ พฤศจิกายน ๒๕๑๕)"
+		// },
+		// {
+		// 	"i":"พระมหาชนกเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก ๑๐ ชาติสุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะ และตรัสรู้เป็นพระสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงสนพระราชหฤทัย เนื่องจากได้ทรงสดับพระธรรมเทศนาของสมเด็จพระมหาวีรวงศ์ แห่งวัดราชผาติการาม เมื่อปีพ.ศ.๒๕๒๐ เรื่องพระมหาชนกเสด็จทอดพระเนตรพระราชอุทยานในกรุงมิถิลา จึงทรงค้นคว้าเรื่องพระมหาชนกในพระไตรปิฎกเพิ่มเติม และทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกตั้งแต่ต้นเรื่อง โดยดัดแปลงเล็กน้อยจากพระสุตตันตปิฎกขุททกนิกายชาดก เล่มที่ ๔ ภาคที่ ๒ เพื่อให้เข้าใใจง่ายขึ้น ทรงแปลพระมหาชนกชาดกเสร็จสมบูรณ์ เมื่อพ.ศ.๒๕๓๑ และโปรดเกล้าโปรดกระหม่อมให้จัดพิมพ์ในปีกาญจนาภิเษกทรงครองสิริราชสมบัติครบ ๕๐ ปี ในวันที่ ๒๘ มีนาคม ๒๕๓๙ และได้มีการพิมพ์เป็นฉบับการ์ตูน ในปีพ.ศ.๒๕๔๒",
+		// }
+		// ];
 
 		h_menu1.addEventListener("click", clickContent1);
 		h_menu2.addEventListener("click", clickContent2);
@@ -168,14 +184,16 @@
 			h_menu2.classList.remove("clickMenu");
 			h_menu1.classList.add("lightOrange");
 			h_menu1.classList.add("clickMenu");
-			h_img.src = "img/history/KingRe.jpg";
-			h_innerHead.innerText = "ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช";
-			h_innerContent_sec1.innerHTML = content[0].i + '<br><br>' + content[0].ii;
-			sec_2.classList.remove("setDisplay");
-			sec_3.classList.remove("setDisplay");
-			sec_4.classList.remove("setDisplay");
-			sec_5.classList.remove("setDisplay");
-			sec_6.classList.remove("setDisplay");
+			h_content2.classList.add("setDisplay");
+			h_content1.classList.remove("setDisplay");
+			// h_img.src = "img/history/KingRe.jpg";
+			// h_innerHead.innerText = "ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช";
+			// h_innerContent_sec1.innerHTML = content[0].i + '<br><br>' + content[0].ii;
+			// sec_2.classList.remove("setDisplay");
+			// sec_3.classList.remove("setDisplay");
+			// sec_4.classList.remove("setDisplay");
+			// sec_5.classList.remove("setDisplay");
+			// sec_6.classList.remove("setDisplay");
 			inner_menu.classList.remove("show-menu");
 			hbg.classList.remove("fa-times");
 			hbg.classList.add("fa-bars");
@@ -183,19 +201,21 @@
 		}
 		
 		function clickContent2(){
-			sec_1.classList.remove("sec1");
+			// sec_1.classList.remove("sec1");
 			h_menu1.classList.remove("lightOrange");
 			h_menu1.classList.remove("clickMenu");
 			h_menu2.classList.add("lightOrange");
 			h_menu2.classList.add("clickMenu");
-			h_innerHead.innerText = "ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก";
-			h_innerContent_sec1.innerText = content[1].i;
-			h_img.src = "img/history/img001Re.jpg";
-			sec_2.classList.add("setDisplay");
-			sec_3.classList.add("setDisplay");
-			sec_4.classList.add("setDisplay");
-			sec_5.classList.add("setDisplay");
-			sec_6.classList.add("setDisplay");
+			h_content2.classList.remove("setDisplay");
+			h_content1.classList.add("setDisplay");
+			// h_innerHead.innerText = "ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก";
+			// h_innerContent_sec1.innerText = content[1].i;
+			// h_img.src = "img/history/img001Re.jpg";
+			// sec_2.classList.add("setDisplay");
+			// sec_3.classList.add("setDisplay");
+			// sec_4.classList.add("setDisplay");
+			// sec_5.classList.add("setDisplay");
+			// sec_6.classList.add("setDisplay");
 			inner_menu.classList.remove("show-menu");
 			hbg.classList.remove("fa-times");
 			hbg.classList.add("fa-bars");
