--- a/artist.html
+++ b/artist.html
@@ -245,6 +245,7 @@
 			a_content6.classList.add("setDisplay");
 			a_content7.classList.add("setDisplay");
 			a_content8.classList.add("setDisplay");
+			window.scrollTo(0, 0);
 		}
 		
 		function clickContent2(){
@@ -260,6 +261,7 @@
 			a_content6.classList.add("setDisplay");
 			a_content7.classList.add("setDisplay");
 			a_content8.classList.add("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clickContent3(){
@@ -275,6 +277,7 @@
 			a_content6.classList.add("setDisplay");
 			a_content7.classList.add("setDisplay");
 			a_content8.classList.add("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clickContent4(){
@@ -290,6 +293,7 @@
 			a_content6.classList.add("setDisplay");
 			a_content7.classList.add("setDisplay");
 			a_content8.classList.add("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clickContent5(){
@@ -305,6 +309,7 @@
 			a_content6.classList.add("setDisplay");
 			a_content7.classList.add("setDisplay");
 			a_content8.classList.add("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clickContent6(){
@@ -320,6 +325,7 @@
 			a_content5.classList.add("setDisplay");
 			a_content7.classList.add("setDisplay");
 			a_content8.classList.add("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clickContent7(){
@@ -335,6 +341,7 @@
 			a_content5.classList.add("setDisplay");
 			a_content6.classList.add("setDisplay");
 			a_content8.classList.add("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clickContent8(){
@@ -350,6 +357,7 @@
 			a_content5.classList.add("setDisplay");
 			a_content6.classList.add("setDisplay");
 			a_content7.classList.add("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clearClick(){			
