--- a/history.html
+++ b/history.html
@@ -198,6 +198,7 @@
 			hbg.classList.remove("fa-times");
 			hbg.classList.add("fa-bars");
 			hbg.classList.remove("darkOrange");
+			window.scrollTo(0, 0);
 		}
 		
 		function clickContent2(){
@@ -220,7 +221,7 @@
 			hbg.classList.remove("fa-times");
 			hbg.classList.add("fa-bars");
 			hbg.classList.remove("darkOrange");
-			
+			window.scrollTo(0, 0);
 		}
 
 		function navbar(){
