--- a/media.html
+++ b/media.html
@@ -144,6 +144,7 @@
 			m_menu1.classList.add("clickMenu");
 			m_content2.classList.add("setDisplay");
 			m_content3.classList.add("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clickContent2(){
@@ -154,6 +155,7 @@
 			m_content1.classList.add("setDisplay");
 			m_content3.classList.add("setDisplay");
 			m_content2.classList.remove("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clickContent3(){
@@ -164,6 +166,7 @@
 			m_content1.classList.add("setDisplay");
 			m_content2.classList.add("setDisplay");
 			m_content3.classList.remove("setDisplay");
+			window.scrollTo(0, 0);
 		}
 
 		function clearClick(){			
