--- a/artist.html
+++ b/artist.html
@@ -18,7 +18,6 @@
 	</style>
 </head>
 <body>
-	
 	<div class="h-menu setBgWhite" id="h_menu">
 		<div id="divLogo">
 			<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
@@ -56,8 +55,7 @@
 		<div id="backHome">
 			<a href="index.html"><i class="fa fa-chevron-circle-left lightGreen" style="font-size:48px"></i></a>
 			
-		</div>			
-		
+		</div>		
 	</div>
 	
 	<div class="a-content animate" id="a_content1">
@@ -216,10 +214,12 @@
 			<img src="img/artist/8/1.jpg" class="mobile-width">
 			<img src="img/artist/8/2.jpg" class="mobile-width">
 		</div>
-
+		
 	</div>
 
-	<footer class="a-footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง © 2019</footer>
+	
+	<footer class="footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ <br>สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง © 2019
+	</footer>
 
 	<script type="text/javascript">
 		
