--- a/history.html
+++ b/history.html
@@ -162,7 +162,9 @@
 		</div>
 	</div>
 
-	<footer class="footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเก้าเจ้าคุณทหารลาดกระบัง © 2019</footer>
+	
+	<footer class="footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ <br>สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง © 2019
+	</footer>
 
 	<script type="text/javascript">
 		// content = [
