--- a/history.html
+++ b/history.html
@@ -53,13 +53,12 @@
 	</div>
 
 	<div class="h-content animate" id="h_content1">
-		<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</p>
-		<div class="h-section-1 sec1" id="sec_1">
+		<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">
+		ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</p>
+		<div class="h-section" id="sec_1">
 			<div class="img-left">
-				<img src="img/history/1.jpg" class="h_imgContent" id="h_img">
+				<img src="img/history/KingRamaIX2.jpg" class="h_imgContent" id="h_img">
 			</div>
-
-
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					“นักเขียน นักประพันธ์ งานสำคัญก็คือ แสดงความคิดของตอนออกมาเป็นเรื่องชีวิต หรือเรื่องแต่งขึ้นมา เพื่อให้ผู้อื่นได้ประโยชน์ คือความรู้บ้าง บันเทิงบ้าง นักแสดงความคิดสำคัญมาก เพราะว่ามีอิทธิพลต่อชีวิตของมวลมนุษย์ อาจทำให้เกิดความคล้อยตามไปและตัวท่านเขียนดีก็ยิ่งคล้อยตามกันมาก ฉะนั้น นักประพันธ์ต้องมีความรับผิดชอบสูง เพราะท่านเป็นผู้ปั้นความคิดและความบริสุทธิ์ในความคิด จึงเป็นเรื่องที่สำคัญ ดังบทความกลั่นกรองไว้ในสมองว่า สิ่งที่จะเขียนออกมาจะไม่แสลง ไม่ทำลายความคิดของประชากร ไม่ทำลายผู้อื่น และตนเอง คือมีเสรีภาพในการเขียนอย่างเต็มที่ในขอบเขตของศีลธรรม”<br><br>
@@ -67,8 +66,12 @@
 				</p>
 			</div>
 		</div>
-		<div class="h-section-2" id="sec_2">
-			<div class="h-innerContent2">
+
+		<div class="h-section reverse" id="sec_2">
+			<div class="img-left">
+				<img src="img/history/2.jpg" class="h_imgContent">
+			</div>
+			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>“พระราชานุกิจรัชกาลที่ ๘”</strong><br>
 					กำหนดเวลาที่พระเจ้าแผ่นดินจะทรงประพฤติพระราชกิจต่างๆ ประจำทุกวันเป็นส่วนพระองค์ โดยอยู่ในกฎมนเทียรบาล ตั้งแต่ครั้งรัชกาลสมเด็จพระบรมไตรโลกนาถ ซึ่งแสดงถึงพระปรีชาญาณด้านภาษาไทยของพระองค์ตั้งแต่ยังทรงพระเยาว์
@@ -78,12 +81,9 @@
 					พิมพ์ครั้งแรกในหนังสือรายเดือน วงวรรณคดี ฉบับประจำเดือนสิงหาคม พ.ศ.๒๔๙๐ เป็นบันทึกพระราชนิพนธ์ขึ้นในช่วงเวลาเสด็จพระราชดำเนินเพื่อกลับไปศึกษาต่อประเทศสวิตเซอร์แลนด์ เมื่อวันที่ ๑๙ สิงหาคม พ.ศ.๒๔๘๙ หลังจากที่ พระองค์เสด็จขึ้นครองราชย์ เมื่อวันที่ ๙ มิถุนายน พ.ศ.๒๔๘๙ โดยทรงบันทึกเป็นเรื่องราวการเดินทาง แสดงถึงความรู้สึกของพระองค์ที่ห่วงใยพสกนิกรอย่างยิ่ง รวมถึงเหตุการณ์ที่ทรงพบเจอ
 				</p>
 			</div>
-			<div class="img-right">
-				<img src="img/history/2.jpg" class="h_imgContent">
-			</div>
-
 		</div>
-		<div class="h-section-1" id="sec_3">
+
+		<div class="h-section" id="sec_3">
 			<div class="img-left">
 				<img src="img/history/3.jpg" class="h_imgContent">
 			</div>
@@ -99,8 +99,12 @@
 				</p>
 			</div>
 		</div>
-		<div class="h-section-2" id="sec_4">				
-			<div class="h-innerContent2">
+
+		<div class="h-section reverse" id="sec_4">
+			<div class="img-left">
+				<img src="img/history/4.jpg" class="h_imgContent">
+			</div>
+			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>“พระมหาชนก”</strong><br>
 					ตีพิมพ์เมื่อ พ.ศ.๒๕๓๙ โดยมีทั้งภาคภาษาไทยและภาษาอังกฤษอยู่ในเล่มเดียวกัน โดยเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก ๑๐ ชาติ สุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะและตรัสรู้เป็นพระสัมมาสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกและยังทรงแปลเป็นภาษาสันสกฤตประกอบอีกภาษา
@@ -110,12 +114,9 @@
 					พระราชนิพนธ์เล่มนี้เป็นภาษาไทยและภาษาอังกฤษในเล่มเดียวกัน และเป็นหนังสือพระราชนิพนธ์ที่ติดอันดับขายดีที่สุดของประเทศในปี พ.ศ.๒๕๔๕ เนื้อหาหลักเป็นเรื่องความกตัญญูรู้คุณของคุณทองแดง สุนัขทรงเลี้ยง รวมถึงความจงรักภักดี ความมีมารยาท และการสั่งสอนลูกของคุณทองแดง และในพระราชนิพนธ์ได้ทรงยกย่องคุณทองแดงที่มีต่อแม่มะลิ ‘ผิดกับคนอื่นที่เมื่อกลายมาเป็นคนสำคัญแล้วมักจะลืมตัว และดูหมิ่นผู้มีพระคุณซึ่งเป็นคนต่ำต้อย’ อันเป็นประโยชน์ต่อการดำรงชีวิต
 				</p>
 			</div>
-			<div class="img-right">
-				<img src="img/history/4.jpg" class="h_imgContent">
-			</div>
-
 		</div>
-		<div class="h-section-1" id="sec_5">
+
+		<div class="h-section" id="sec_5">
 			<div class="img-left">
 				<img src="img/history/5.jpg" class="h_imgContent">
 			</div>
@@ -127,8 +128,9 @@
 				</p>
 			</div>
 		</div>
-		<div class="h-section-2" id="sec_6">				
-			<div class="h-innerContent full">
+
+		<div class="h-section" id="sec_6">
+			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>นอกจากนี้ยังทรงแปลและเรียบเรียงบทความ อีกหลายเรื่องด้วยกัน</strong><br>
 					๑. ข่าวจากวิทยุเพื่อสันติภาพและความก้าวหน้า จาก Radio Peace and Progress ในนิตยสาร Intelligence Degest ฉบับลงวันที่ ๑ เมษายน ค.ศ. ๑๙๗๕ (พ.ศ. ๒๕๑๘)
@@ -148,7 +150,7 @@
 
 	<div class="h-content setDisplay animate" id="h_content2">
 		<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</p>
-		<div class="h-section-1 sec1" id="sec_1">
+		<div class="h-section" id="sec_1">
 			<div class="img-left">
 				<img src="img/history/img001Re.jpg" class="h_imgContent" id="h_img">
 			</div>
