--- a/media.html
+++ b/media.html
@@ -70,7 +70,7 @@
 
 	<div class="h-content setDisplay m-1 animate" id="m_content2">
 		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">หนังสือการ์ตูนพระมหาชนก</p>
-		<div class="h-section-1" id="sec_1">
+		<div class="h-section" id="sec_1">
 			<div class="img-left">
 				<img src="img/media/book2.jpg" class="h_imgContent" id="h_img">
 			</div>
@@ -88,7 +88,7 @@
 		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">แอนิเมชั่นพระมหาชนก</p>
 		<iframe width="90%" height="500" src="https://www.youtube.com/embed/XMBPsnacYWI?autoplay=1" allow="autoplay" frameborder="0" allowfullscreen></iframe>
 		<!-- allow="autoplay" -->
-		<div class="h-section-1" id="sec_1">
+		<div class="h-section" id="sec_1">
 			<div class="img-left">
 				<img src="img/media/book3.jpg" class="h_imgContent" id="h_img">
 			</div>			
@@ -104,7 +104,7 @@
 
 		</div>
 
-		<div class="h-section-1" id="sec_1">
+		<div class="h-section" id="sec_1">
 			<div class="img-left">
 				<img src="img/media/book4.jpg" class="h_imgContent" id="h_img">
 			</div>			
