--- a/artist.html
+++ b/artist.html
@@ -58,7 +58,7 @@
 		</div>		
 	</div>
 	
-	<div class="a-content animate" id="a_content1">
+	<div class="a-content a a-animate" id="a_content1">
 		<div class="a-img">
 			<img src="img/artist/1/artist.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -78,7 +78,7 @@
 	</div>
 
 	
-	<div class="a-content setDisplay animate" id="a_content2">
+	<div class="a-content setDisplay a-animate" id="a_content2">
 		<div class="a-img">
 			<img src="img/artist/2/re.jpg" class="h_imgContent" id="a_img">
 		</div>		
@@ -97,7 +97,7 @@
 		</div>		
 	</div>
 
-	<div class="a-content setDisplay animate" id="a_content3">
+	<div class="a-content setDisplay a-animate" id="a_content3">
 		<div class="a-img">
 			<img src="img/artist/3/re.jpg" class="h_imgContent" id="a_img">
 		</div>		
@@ -116,7 +116,7 @@
 		</div>		
 	</div>
 
-	<div class="a-content setDisplay animate" id="a_content4">
+	<div class="a-content setDisplay a-animate" id="a_content4">
 		<div class="a-img">
 			<img src="img/artist/4/a.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -136,7 +136,7 @@
 		
 	</div>
 
-	<div class="a-content setDisplay animate" id="a_content5">
+	<div class="a-content setDisplay a-animate" id="a_content5">
 		<div class="a-img">
 			<img src="img/artist/5/a.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -156,7 +156,7 @@
 		</div>
 	</div>
 
-	<div class="a-content setDisplay animate" id="a_content6">
+	<div class="a-content setDisplay a-animate" id="a_content6">
 		<div class="a-img">
 			<img src="img/artist/6/a.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -176,7 +176,7 @@
 		</div>
 	</div>
 
-	<div class="a-content setDisplay animate" id="a_content7">
+	<div class="a-content setDisplay a-animate" id="a_content7">
 		<div class="a-img">
 			<img src="img/artist/7/a.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -197,7 +197,7 @@
 		
 	</div>
 
-	<div class="a-content setDisplay animate" id="a_content8">
+	<div class="a-content setDisplay a-animate" id="a_content8">
 		<div class="a-img">
 			<img src="img/artist/8/a.jpg" class="h_imgContent" id="a_img">
 		</div>
@@ -214,7 +214,7 @@
 			<img src="img/artist/8/1.jpg" class="mobile-width">
 			<img src="img/artist/8/2.jpg" class="mobile-width">
 		</div>
-		
+
 	</div>
 
 	
