--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 			</div>
 			<div id="listMenu">
 				<ul class="innerMenu darkGreen Winter">
-					<li id="m_story" class="h_menu" style="font-size: 2.7em;">STORY</li>
-					<li id="m_history" class="h_menu" style="font-size: 2.7em;">HISTORY</li>
-					<li id="m_media" class="h_menu" style="font-size: 2.7em;">MEDIA</li>
-					<li id="m_artist" class="h_menu" style="font-size: 2.7em;">ARTIST</li>
+					<li id="m_story" class="h_menu" style="font-size: 30pt;">STORY</li>
+					<li id="m_history" class="h_menu" style="font-size: 30pt;">HISTORY</li>
+					<li id="m_media" class="h_menu" style="font-size: 30pt;">MEDIA</li>
+					<li id="m_artist" class="h_menu" style="font-size: 30pt;">ARTIST</li>
 				</ul>
 				<div id="caption">
 					<p id="captionText"></p>
 				</div>
+				<button id="btn">click here</button>
 			</div>
 			
 		</div>
