--- a/media.html
+++ b/media.html
@@ -54,7 +54,7 @@
 	
 	<div class="h-content m-1 animate" id="m_content1">
 		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">พระมหาชนกฉบับตีพิมพ์</p>
-		<div class="h-section-1" id="sec_1">
+		<div class="h-section" id="sec_1">
 			<div class="img-left">
 				<img src="img/media/book1.jpg" class="h_imgContent" id="h_img">
 			</div>
@@ -86,7 +86,7 @@
 
 	<div class="h-content setDisplay animate" id="m_content3">
 		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">แอนิเมชั่นพระมหาชนก</p>
-		<iframe width="90%" height="500" src="https://www.youtube.com/embed/XMBPsnacYWI?autoplay=1" allow="autoplay" frameborder="0" allowfullscreen></iframe>
+		<iframe width="90%" height="500" src="https://www.youtube.com/embed/XMBPsnacYWI?autoplay=0" allow="autoplay" frameborder="0" allowfullscreen id="video"></iframe>
 		<!-- allow="autoplay" -->
 		<div class="h-section" id="sec_1">
 			<div class="img-left">
@@ -147,6 +147,7 @@
 			m_content2.classList.add("setDisplay");
 			m_content3.classList.add("setDisplay");
 			window.scrollTo(0, 0);
+			video.src = "https://www.youtube.com/embed/XMBPsnacYWI?autoplay=0";
 		}
 
 		function clickContent2(){
@@ -158,6 +159,7 @@
 			m_content3.classList.add("setDisplay");
 			m_content2.classList.remove("setDisplay");
 			window.scrollTo(0, 0);
+			video.src = "https://www.youtube.com/embed/XMBPsnacYWI?autoplay=0";
 		}
 
 		function clickContent3(){
@@ -169,6 +171,7 @@
 			m_content2.classList.add("setDisplay");
 			m_content3.classList.remove("setDisplay");
 			window.scrollTo(0, 0);
+			video.src = "https://www.youtube.com/embed/XMBPsnacYWI?autoplay=1";
 		}
 
 		function clearClick(){			
