--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div id="caption">
 					<p id="captionText"></p>
 				</div>
-				<button id="btn">click here</button>
+				<button id="btn">Read more</button>
 			</div>
 			
 		</div>
