--- a/history.html
+++ b/history.html
@@ -57,7 +57,7 @@
 		ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</p>
 		<div class="h-section" id="sec_1">
 			<div class="img-left">
-				<img src="img/history/KingRamaIX2.jpg" class="h_imgContent" id="h_img">
+				<img src="img/history/kingramaix2.jpg" class="h_imgContent" id="h_img">
 			</div>
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
