--- a/history.html
+++ b/history.html
@@ -74,7 +74,7 @@
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>“พระราชานุกิจรัชกาลที่ ๘”</strong><br>
-					กำหนดเวลาที่พระเจ้าแผ่นดินจะทรงประพฤติพระราชกิจต่างๆ ประจำทุกวันเป็นส่วนพระองค์ โดยอยู่ในกฎมนเทียรบาล ตั้งแต่ครั้งรัชกาลสมเด็จพระบรมไตรโลกนาถ ซึ่งแสดงถึงพระปรีชาญาณด้านภาษาไทยของพระองค์ตั้งแต่ยังทรงพระเยาว์
+					กำหนดเวลาที่พระเจ้าแผ่นดินจะทรงประพฤติพระราชกิจต่างๆ ประจำทุกวันเป็นส่วนพระองค์ โดยอยู่ในกฎมณเฑียรบาล ตั้งแต่ครั้งรัชกาลสมเด็จพระบรมไตรโลกนาถ ซึ่งแสดงถึงพระปรีชาญาณด้านภาษาไทยของพระองค์ตั้งแต่ยังทรงพระเยาว์
 				</p>
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>“เมื่อข้าพเจ้าจากสยามมาสู่สวิตเซอร์แลนด์”</strong><br>
@@ -124,7 +124,7 @@
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>“พระราชดำรัส”</strong><br>
-					ในวันที่ ๔ ธันวาคม พ.ศ.๒๕๓๒ พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงแปลเป็นภาษาอังกฤษ โดยรวบรวมพระราชดำรัสที่พระราชทานแก่คณะบุคคลที่เข้าเฝ้าถวายชัยมงคล เนื่องในโอกาสวันเฉลิพระชนมพรรษาของทุกปี พระองค์ทรงเริ่มแปลพระราชดำรัสเรื่องน้ำและสิ่งแวดล้อม
+					ในวันที่ ๔ ธันวาคม พ.ศ.๒๕๓๒ พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงแปลเป็นภาษาอังกฤษ โดยรวบรวมพระราชดำรัสที่พระราชทานแก่คณะบุคคลที่เข้าเฝ้าถวายชัยมงคล เนื่องในโอกาสวันเฉลิมพระชนมพรรษาของทุกปี พระองค์ทรงเริ่มแปลพระราชดำรัสเรื่องน้ำและสิ่งแวดล้อม
 				</p>
 			</div>
 		</div>
@@ -158,7 +158,7 @@
 
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
-					พระมหาชนกเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก ๑๐ ชาติสุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะ และตรัสรู้เป็นพระสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงสนพระราชหฤทัย เนื่องจากได้ทรงสดับพระธรรมเทศนาของสมเด็จพระมหาวีรวงศ์ แห่งวัดราชผาติการาม เมื่อปีพ.ศ.๒๕๒๐ เรื่องพระมหาชนกเสด็จทอดพระเนตรพระราชอุทยานในกรุงมิถิลา จึงทรงค้นคว้าเรื่องพระมหาชนกในพระไตรปิฎกเพิ่มเติม และทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกตั้งแต่ต้นเรื่อง โดยดัดแปลงเล็กน้อยจากพระสุตตันตปิฎกขุททกนิกายชาดก เล่มที่ ๔ ภาคที่ ๒ เพื่อให้เข้าใใจง่ายขึ้น ทรงแปลพระมหาชนกชาดกเสร็จสมบูรณ์ เมื่อพ.ศ.๒๕๓๑ และโปรดเกล้าโปรดกระหม่อมให้จัดพิมพ์ในปีกาญจนาภิเษกทรงครองสิริราชสมบัติครบ ๕๐ ปี ในวันที่ ๒๘ มีนาคม ๒๕๓๙ และได้มีการพิมพ์เป็นฉบับการ์ตูน ในปีพ.ศ.๒๕๔๒
+					พระมหาชนกเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก ๑๐ ชาติสุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะ และตรัสรู้เป็นพระสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงสนพระราชหฤทัย เนื่องจากได้ทรงสดับพระธรรมเทศนาของสมเด็จพระมหาวีรวงศ์ แห่งวัดราชผาติการาม เมื่อปีพ.ศ.๒๕๒๐ เรื่องพระมหาชนกเสด็จทอดพระเนตรพระราชอุทยานในกรุงมิถิลา จึงทรงค้นคว้าเรื่องพระมหาชนกในพระไตรปิฎกเพิ่มเติม และทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกตั้งแต่ต้นเรื่อง โดยดัดแปลงเล็กน้อยจากพระสุตตันตปิฎกขุททกนิกายชาดก เล่มที่ ๔ ภาคที่ ๒ เพื่อให้เข้าใจง่ายขึ้น ทรงแปลพระมหาชนกชาดกเสร็จสมบูรณ์ เมื่อพ.ศ.๒๕๓๑ และโปรดเกล้าโปรดกระหม่อมให้จัดพิมพ์ในปีกาญจนาภิเษกทรงครองสิริราชสมบัติครบ ๕๐ ปี ในวันที่ ๒๘ มีนาคม ๒๕๓๙ และได้มีการพิมพ์เป็นฉบับการ์ตูน ในปีพ.ศ.๒๕๔๒
 				</p>
 			</div>
 		</div>
