--- a/history.html
+++ b/history.html
@@ -54,7 +54,7 @@
 
 	<div class="h-content animate" id="h_content1">
 		<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">
-		ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</p>
+		ผลงานการประพันธ์ของ พระบาทสมเด็จ<br>พระปรมินทร มหาภูมิพลอดุลยเดช</p>
 		<div class="h-section" id="sec_1">
 			<div class="img-left">
 				<img src="img/history/kingramaix2.jpg" class="h_imgContent" id="h_img">
