--- a/artist.html
+++ b/artist.html
@@ -60,7 +60,7 @@
 	
 	<div class="a-content a a-animate" id="a_content1">
 		<div class="a-img">
-			<img src="img/artist/1/artist.jpg" class="h_imgContent" id="a_img">
+			<img src="img/artist/1/artist.jpg" id="a_img">
 		</div>
 
 		<div class="a-innerContent">
@@ -71,7 +71,7 @@
 		</div>
 
 		<div class="a-work">
-			<img src="img/artist/1/work.jpg" class="mobile-width">
+			<img src="img/artist/1/work.jpg">
 		</div>
 		
 	</div>
@@ -79,7 +79,7 @@
 	
 	<div class="a-content setDisplay a-animate" id="a_content2">
 		<div class="a-img">
-			<img src="img/artist/2/re.jpg" class="h_imgContent" id="a_img">
+			<img src="img/artist/2/re.jpg" id="a_img">
 		</div>		
 
 		<div class="a-innerContent">
@@ -90,14 +90,14 @@
 		</div>
 
 		<div class="a-work">
-			<img src="img/artist/2/work1.jpg" class="mobile-width">
-			<img src="img/artist/2/work2.jpg" class="mobile-width">
+			<img src="img/artist/2/work1.jpg">
+			<img src="img/artist/2/work2.jpg">
 		</div>		
 	</div>
 
 	<div class="a-content setDisplay a-animate" id="a_content3">
 		<div class="a-img">
-			<img src="img/artist/3/re.jpg" class="h_imgContent" id="a_img">
+			<img src="img/artist/3/re.jpg" id="a_img">
 		</div>		
 
 		<div class="a-innerContent">
@@ -108,14 +108,14 @@
 		</div>
 
 		<div class="a-work">
-			<img src="img/artist/3/1.jpg" class="mobile-width">
-			<img src="img/artist/3/2.jpg" class="mobile-width">
+			<img src="img/artist/3/1.jpg">
+			<img src="img/artist/3/2.jpg">
 		</div>		
 	</div>
 
 	<div class="a-content setDisplay a-animate" id="a_content4">
 		<div class="a-img">
-			<img src="img/artist/4/a.jpg" class="h_imgContent" id="a_img">
+			<img src="img/artist/4/a.jpg" id="a_img">
 		</div>
 
 		<div class="a-innerContent">
@@ -126,15 +126,15 @@
 		</div>
 
 		<div class="a-work">
-			<img src="img/artist/4/1.jpg" class="mobile-width">
-			<img src="img/artist/4/2.jpg" class="mobile-width">
+			<img src="img/artist/4/1.jpg">
+			<img src="img/artist/4/2.jpg">
 		</div>
 		
 	</div>
 
 	<div class="a-content setDisplay a-animate" id="a_content5">
 		<div class="a-img">
-			<img src="img/artist/5/a.jpg" class="h_imgContent" id="a_img">
+			<img src="img/artist/5/a.jpg" id="a_img">
 		</div>
 
 		<div class="a-innerContent">
@@ -145,15 +145,15 @@
 		</div>
 
 		<div class="a-work">
-			<img src="img/artist/5/1.jpg" class="mobile-width">
-			<img src="img/artist/5/2.jpg" class="mobile-width">
-			<img src="img/artist/5/3.jpg" class="mobile-width">
+			<img src="img/artist/5/1.jpg">
+			<img src="img/artist/5/2.jpg">
+			<img src="img/artist/5/3.jpg">
 		</div>
 	</div>
 
 	<div class="a-content setDisplay a-animate" id="a_content6">
 		<div class="a-img">
-			<img src="img/artist/6/a.jpg" class="h_imgContent" id="a_img">
+			<img src="img/artist/6/a.jpg" id="a_img">
 		</div>
 
 		<div class="a-innerContent">
@@ -164,15 +164,15 @@
 		</div>
 
 		<div class="a-work">
-			<img src="img/artist/6/1.jpg" class="mobile-width">
-			<img src="img/artist/6/2.jpg" class="mobile-width">
-			<img src="img/artist/6/3.jpg" class="mobile-width">
+			<img src="img/artist/6/1.jpg">
+			<img src="img/artist/6/2.jpg">
+			<img src="img/artist/6/3.jpg">
 		</div>
 	</div>
 
 	<div class="a-content setDisplay a-animate" id="a_content7">
 		<div class="a-img">
-			<img src="img/artist/7/a.jpg" class="h_imgContent" id="a_img">
+			<img src="img/artist/7/a.jpg" id="a_img">
 		</div>
 
 		<div class="a-innerContent">
@@ -183,16 +183,16 @@
 		</div>
 
 		<div class="a-work">
-			<img src="img/artist/7/1.jpg" class="mobile-width">
-			<img src="img/artist/7/2.jpg" class="mobile-width">
-			<img src="img/artist/7/3.jpg" class="mobile-width">
+			<img src="img/artist/7/1.jpg">
+			<img src="img/artist/7/2.jpg">
+			<img src="img/artist/7/3.jpg">
 		</div>
 		
 	</div>
 
 	<div class="a-content setDisplay a-animate" id="a_content8">
 		<div class="a-img">
-			<img src="img/artist/8/a.jpg" class="h_imgContent" id="a_img">
+			<img src="img/artist/8/a.jpg" id="a_img">
 		</div>
 
 		<div class="a-innerContent">
@@ -203,8 +203,8 @@
 		</div>
 
 		<div class="a-work">
-			<img src="img/artist/8/1.jpg" class="mobile-width">
-			<img src="img/artist/8/2.jpg" class="mobile-width">
+			<img src="img/artist/8/1.jpg">
+			<img src="img/artist/8/2.jpg">
 		</div>
 
 	</div>
